--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,6 +1,3 @@
 @use './partials/variables' as *;
+@use './partials/header.scss';
 @import '~bootstrap/scss/bootstrap';
-
-header {
-    color: $brand-primary;
-}
