feat: add comics hero

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,3 +1,4 @@
 @use './partials/variables' as *;
 @use './partials/header.scss';
+@use './partials/hero.scss';
 @import '~bootstrap/scss/bootstrap';
