--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -4,6 +4,36 @@
 @import '~bootstrap/scss/bootstrap';
 
 section.cards {
+    .banner {
+        background-color: $brand-primary;
+        max-width: fit-content;
+        color: white;
+        font-weight: 700;
+        font-size: 1.5rem;
+        padding: 0.6rem 1.2rem;
+    }
+
+    .banner-top {
+        position: absolute;
+        left: 0;
+        top: -1.5rem;
+    }
+
+    button {
+        border: none;
+
+        &.banner {
+            font-size: 0.8rem;
+            padding: 0.6rem 3.3rem;
+            margin: 0;
+        }
+
+        &:hover {
+            opacity: 0.85;
+            transition: 0.2s;
+        }
+    }
+
     .single-card {
         color: white;
 
@@ -13,5 +43,52 @@ section.cards {
             object-fit: cover;
             margin-bottom: 1rem;
         }
+    }
+}
+
+.features-ctn {
+    background-color: $brand-primary;
+    padding: 2.5rem 0;
+
+    .container {
+        display: flex;
+        justify-content: center;
+        gap: 0.5rem;
+
+    }
+}
+
+.features {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    cursor: pointer;
+
+    &:hover {
+        transform: scale(1.1);
+        transition: 0.2s;
+    }
+
+    &.last {
+        flex-grow: 1;
+
+        img {
+            max-width: 16.5%;
+        }
+    }
+
+    img {
+        max-width: 20%;
+
+        &.locator {
+            max-height: 59px;
+            margin-left: 1rem;
+        }
+    }
+
+    span {
+        margin-left: 1rem;
+        font-size: smaller;
     }
 }
