--- a/resources/scss/partials/_header.scss
+++ b/resources/scss/partials/_header.scss
@@ -1,20 +1,43 @@
 @use './variables' as *;
-header {
-    ul {
-        list-style: none;
 
-        li {
-            margin: 0 1rem;
+header {
+    a {
+        text-decoration: none;
+        font-weight: 700;
+        color: #464646;
+
+        &:hover {
+            color: $brand-primary;
+            transition: 0.2s;
         }
-        
-        a {
-            text-decoration: none;
-            color: rgb(90, 90, 90);
-            font-weight: 700;
-        }
+
     }
 
-    .active {
-        color: $brand-primary;
+    ul {
+        list-style: none;
+        display: flex;
+        margin: 0;
+
+        li {
+            margin: 0 0.9rem;
+            height: 9rem;
+            position: relative;
+            display: flex;
+            align-items: center;
+        }
+
+        .active a {
+            color: $brand-primary;
+        }
+
+        .active::after {
+                content: '';
+                width: 100%;
+                height: 5px;
+                background-color: $brand-primary;
+                position: absolute;
+                bottom: 0;
+                left: 0;
+            }
     }
 }
